--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "jquery": "^3.3.1",
     "MDBootstrap": "^4.5.11",
-    "Font-Awesome": "^5.3.1"
+    "Font-Awesome": "^5.3.1",
+    "jquery-confirm2": "^3.3.2"
   }
 }
